--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@bytemd/plugin-gfm": "^1.20.2",
+		"bytemd": "^1.20.2",
+		"svelte-loading-spinners": "^0.3.4",
+		"svelte-markdown": "^0.2.3",
 		"svelte-material-icons": "^2.1.0"
 	}
 }
