Updated quiz and improved responsiveness

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,30 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"paths": {
+			"$src": [
+				"./src"
+			],
+			"$src/*": [
+				"./src/*"
+			],
+			"$data": [
+				"./src/data"
+			],
+			"$data/*": [
+				"./src/data/*"
+			],
+			"$stor": [
+				"./src/stores.js"
+			],
+			"$lib": [
+				"./src/lib"
+			],
+			"$lib/*": [
+				"./src/lib/*"
+			]
+		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
