--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@bytemd/plugin-gfm": "^1.20.2",
 		"@types/uuid": "^9.0.1",
 		"bytemd": "^1.20.2",
+		"svelte-confetti": "^1.2.2",
 		"svelte-loading-spinners": "^0.3.4",
 		"svelte-markdown": "^0.2.3",
 		"svelte-material-icons": "^2.1.0",
