--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
+		"host": "vite dev --host",
 		"build": "vite build",
 		"deploy": "touch build/.nojekyll && gh-pages -d build -t true",
 		"preview": "vite preview",
@@ -32,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@bytemd/plugin-gfm": "^1.20.2",
+		"@icons-pack/svelte-simple-icons": "^3.0.0",
 		"@types/uuid": "^9.0.1",
 		"bytemd": "^1.20.2",
 		"svelte-confetti": "^1.2.2",
